--- a/huzaifa/keyword-research-2.html
+++ b/huzaifa/keyword-research-2.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <meta name="title" content="Keyword Research">
 <meta name="dc.title" content="Keyword Research">
-<meta name="description" content="Keyword research (is) an essential aspect of any SEO campaign. It enables marketers to determine what terms people are searching for and how their target audience looks for information online. It's the process of discovering, analyzing and selecting the most relevant keywords that will drive traffic to your website. ">
+<meta name="description" content="Keyword Research is essential for any business! It helps to identify the words or phrases that potential customers are likely to use when searching for products/services. Negatively, it can also help to identify which terms should be avoided in your content and marketing materials. (By doing so,) you can ensure that your website attracts relevant visitors who are more likely to convert into customers.">
 <meta name="keywords" content="Keyword Research,Keyword Research">
 <meta name="author" content="Keyword Research">
 <link rel="canonical" href="keyword-research-2.html">
@@ -61,7 +61,7 @@ html {
 }
 
 .bg-brown {
- background: #eeece8;
+ background: #f5f3ef;
 }
 
 .bg-primary-new {
@@ -70,7 +70,7 @@ html {
 }
 
 .bg-primary-new * {
- color: #0f0f0f !important;
+ color: #060606 !important;
 }
 
 .display-4 {
@@ -150,13 +150,13 @@ a {
 }
 
 .bg-brown * {
- color: #101010;
+ color: #030303;
 
 }
 
 .bg-brown a,
 .bg-primary-new a {
- color: #101010 !important;
+ color: #030303 !important;
  text-decoration: underline !important;
 }
 
@@ -204,7 +204,7 @@ iframe {
 }
 
 footer {
- background: #101010;
+ background: #141414;
  color: #ffffff;
 }
 
@@ -499,37 +499,37 @@ footer a {
 "teaches": ["Keyword Research"],
 "offers": [{
 "sku": "Keyword Research",
-"availabilityStarts": "2023-06-19 10:50:38",
+"availabilityStarts": "2023-06-19 10:50:41",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:38",
+"availabilityStarts":"2023-06-19 10:50:41",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:38",
+"availabilityStarts":"2023-06-19 10:50:41",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:38",
+"availabilityStarts":"2023-06-19 10:50:41",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:38",
+"availabilityStarts":"2023-06-19 10:50:41",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts": "2023-06-19 10:50:38",
+"availabilityStarts": "2023-06-19 10:50:41",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:38",
+"availabilityStarts":"2023-06-19 10:50:41",
 "priceCurrency": "USD"
 } 
 ],
@@ -1660,7 +1660,7 @@ Q2. Why is link building important for SEO?",
 "name": "Keyword Research",
 "aggregateRating": {
 "@type": "AggregateRating",
-"ratingValue": "5","ratingCount": "3",
+"ratingValue": "3","ratingCount": "5",
 "reviewCount": "5"
 }
 }
@@ -1729,7 +1729,7 @@ Q2. Why is link building important for SEO?",
 <h1 class="mbr-section-h1 text-dark mb-0 ">Keyword Research</h1>  
 <h2 class="mbr-section-subsection text-grey "><b>Keyword Research</b></h2>
 </div><div class="   col-lg-12 m-auto ">
-<div class="content1  ">Keyword research (is) an essential aspect of any SEO campaign. It enables marketers to determine what terms people are searching for and how their target audience looks for information online. It's the process of discovering, analyzing and selecting the most relevant keywords that will drive traffic to your website. <br /> <br /> Yet, keyword research can often be a challenging task! You need to identify which keywords best describe your business, as well as analyze how competitive they are in search engine results pages (SERPs). Additionally, you have to consider the intent behind each search query and make sure it aligns with your overall marketing goals. <br /> <br /> However, by utilizing certain tools and techniques, you can effectively conduct keyword research without too much difficulty. For instance, using Google Adwords Keyword Planner is a great way to generate hundreds of keywords related to your niche in just minutes! Also, leveraging competitor analysis allows you to see what words other businesses in the same industry use when targeting similar audiences. <br /> <br /> Moreover, it's important not to forget about long-tail keywords as these often perform better than generic ones due to their specificity. Long-tail searches tend to have lower search volumes but higher conversion rates - making them invaluable for achieving success with SEO efforts. Furthermore, incorporating negative terms into your strategy can help refine results even further by excluding irrelevant queries from appearing in SERPs. <br /> <br /> So while keyword research is definitely a daunting task - with proper planning and execution it can yield incredible results for any digital marketer looking maximize their SEO performance!<p><a class="ILinks" href="mobile-seo-2.html">Mobile SEO</a></p></div>
+<div class="content1  ">Keyword Research is essential for any business! It helps to identify the words or phrases that potential customers are likely to use when searching for products/services. Negatively, it can also help to identify which terms should be avoided in your content and marketing materials. (By doing so,) you can ensure that your website attracts relevant visitors who are more likely to convert into customers.<br /> <br /> Firstly, you need to brainstorm a list of keywords related to your business and services. This can include common misspellings, synonyms, and other relevant terms.(To do this,) think about how people would search for what you offer. For example, if you own an ice cream parlor, possible keywords could be "ice cream", "sorbet", "frozen yogurt", etc. <br /> <br /> Once you have a list of keywords, start researching them using online tools like Google Keyword Planner or Ubersuggest. These tools will provide useful data on the number of monthly searches for each keyword as well as give insights on related terms and suggested bids for Pay-per-click campaigns. You should also look at competitors' websites to see what words they're targeting with their ads and content. Additionally, consider utilizing keyword research software such as AHREFS or SEMrush - these programs have powerful features that allow you to deeply analyze keyword performance data and discover new opportunities for optimization! <br /> <br /> Finally, once you've identified some good target keywords it's important to implement them effectively in your webpages with proper heading tags and meta descriptions that contain those keywords (so) search engines can easily find them and rank your pages accordingly! Additionally, integrate those keywords into social media posts and ad campaigns as well as blog articles or other content pieces - this way they'll become familiar with potential customers which may lead them directly back to your website! <br /> <br /> In conclusion, keyword research is an important step in creating successful digital marketing strategies; if done properly it will help make sure that all of your efforts drive maximum results from qualified audiences who are more likely to become paying customers!<p><a class="ILinks" href="content-optimization-2.html">Content Optimization</a></p></div>
 </div>
 </div>
 </div>
