--- a/huzaifa/technical-seo-2.html
+++ b/huzaifa/technical-seo-2.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <meta name="title" content="Technical SEO">
 <meta name="dc.title" content="Technical SEO">
-<meta name="description" content="Technical SEO is a key part of any online business. It helps to make sure the website is optimised for search engine results pages (SERPs) and provides an excellent user experience. It involves various processes such as building links, optimizing meta tags, using keywords strategically, creating content with the right keywords and making sure that there are no broken links or other errors. ">
+<meta name="description" content="Technical SEO (or search engine optimization) is an essential part of the internet marketing process. It involves optimizing webpages and content to help improve a website's rank in organic search results. It can be quite complex, but it doesn't have to be! With some dedication and effort, you can get your site up and running quickly.">
 <meta name="keywords" content="Technical SEO,Technical SEO">
 <meta name="author" content="Technical SEO">
 <link rel="canonical" href="technical-seo-2.html">
@@ -61,7 +61,7 @@ html {
 }
 
 .bg-brown {
- background: #fcfaf6;
+ background: #eae8e4;
 }
 
 .bg-primary-new {
@@ -70,7 +70,7 @@ html {
 }
 
 .bg-primary-new * {
- color: #040404 !important;
+ color: #030303 !important;
 }
 
 .display-4 {
@@ -150,13 +150,13 @@ a {
 }
 
 .bg-brown * {
- color: #060606;
+ color: #0c0c0c;
 
 }
 
 .bg-brown a,
 .bg-primary-new a {
- color: #060606 !important;
+ color: #0c0c0c !important;
  text-decoration: underline !important;
 }
 
@@ -204,7 +204,7 @@ iframe {
 }
 
 footer {
- background: #050505;
+ background: #0f0f0f;
  color: #ffffff;
 }
 
@@ -499,37 +499,37 @@ footer a {
 "teaches": ["Technical SEO"],
 "offers": [{
 "sku": "Technical SEO",
-"availabilityStarts": "2023-06-19 10:50:35",
+"availabilityStarts": "2023-06-19 10:50:42",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:35",
+"availabilityStarts":"2023-06-19 10:50:42",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:35",
+"availabilityStarts":"2023-06-19 10:50:42",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:35",
+"availabilityStarts":"2023-06-19 10:50:42",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:35",
+"availabilityStarts":"2023-06-19 10:50:42",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts": "2023-06-19 10:50:35",
+"availabilityStarts": "2023-06-19 10:50:42",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:35",
+"availabilityStarts":"2023-06-19 10:50:42",
 "priceCurrency": "USD"
 } 
 ],
@@ -1729,7 +1729,7 @@ Q2. Why is link building important for SEO?",
 <h1 class="mbr-section-h1 text-dark mb-0 ">Technical SEO</h1>  
 <h2 class="mbr-section-subsection text-grey "><b>Technical SEO</b></h2>
 </div><div class="   col-lg-12 m-auto ">
-<div class="content1  ">Technical SEO is a key part of any online business. It helps to make sure the website is optimised for search engine results pages (SERPs) and provides an excellent user experience. It involves various processes such as building links, optimizing meta tags, using keywords strategically, creating content with the right keywords and making sure that there are no broken links or other errors. <br /> <br /> However, it can be challenging to do technical SEO correctly. You need to know which techniques work best and which ones don't, as well as how to use them effectively in order to get the maximum benefit from your efforts. Additionally, you also have to keep up with changes in search engine algorithms so that your website remains competitive. <br /> <br /> What's more, many of these tasks can be time-consuming and tedious! It requires a lot of patience and attention to detail in order for everything to run smoothly. Also, some techniques may take longer than others before they start showing positive results; thus requiring regular monitoring and updates if necessary. <br /> <br /> Nevertheless, proper technical SEO is worth it! It will help improve your visibility on SERPs, attract more traffic and ultimately increase revenue for your business—all without breaking the bank! Plus, by having a good understanding of what works best for your website specifically, you'll be able to focus more on creating great content instead of worrying about the technical side too much. <br /> <br /> In conclusion, Technical SEO requires knowledge but it pays off! With an optimized website comes better rankings on SERPs which leads to more visitors who could potentially become customers down the line. Moreover, when done right it can save time and money compared to doing it wrong or not doing it at all! So investing in technical SEO should definitely be considered by any serious online business owner looking for success!<p><a class="ILinks" href="link-building-2.html">Link Building</a></p></div>
+<div class="content1  ">Technical SEO (or search engine optimization) is an essential part of the internet marketing process. It involves optimizing webpages and content to help improve a website's rank in organic search results. It can be quite complex, but it doesn't have to be! With some dedication and effort, you can get your site up and running quickly.<br /> <br /> First off, it's important to understand the basics of technical SEO. This includes things like meta tags and keyword density, among other concepts. Once you have a grasp on these fundamentals, you'll want to start looking at more specific SEO techniques such as 301 redirects and structured data markups. Additionally, you should become familiar with tools that measure page speed and other metrics that impact rankings. <br /> <br /> Next up is making sure your website structure is optimized for both humans and robots! Make sure all pages are easy to find and navigate by including breadcrumbs or internal linking structure. You'll also need to pay attention to how URLs are formatted (keep them short & sweet). Also make sure any images or videos include ALT tags for better accessibility! <br /> <br /> Finally, take some time to review your content strategy. Your content should be well written, informative, unique -and- relevant! Focus on topics that fit into your niche so Google knows what kind of information users will find when they visit your site. Additionally you may want to consider using social media platforms or influencer marketing campaigns to broaden your reach even further! <br /> <br /> Overall technical SEO can seem daunting at first but with a bit of practice you'll soon be an expert! Just remember not every strategy works for every website; so don't be afraid to experiment until you find what works best for yours!. And above all else - have fun with it!!<p><a class="ILinks" href="keyword-research-2.html">Keyword Research</a></p></div>
 </div>
 </div>
 </div>
