--- a/huzaifa/local-seo-2.html
+++ b/huzaifa/local-seo-2.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <meta name="title" content="Local SEO">
 <meta name="dc.title" content="Local SEO">
-<meta name="description" content="Local SEO is an essential part of any business' success! It is the process of optimizing a website and its content to be more visible in search engine results for local searches. This helps businesses to increase visibility, drive traffic, generate leads, and ultimately increase their revenue. One way to optimize your website for local searches is by creating content that has keywords specifically related to your location or services. Additionally, it is important to ensure that all information on your site such as address, contact number and opening hours are up-to-date (for example: make sure you don't have old holiday hours listed). ">
+<meta name="description" content="Local SEO (Search Engine Optimization) is a powerful tool for small businesses. It can help you reach custumers in your local area who are looking for services and products which you offer. To ensure that your website shows up at the top of search engine results, it's important to get familiar with some basic local SEO techniques! ">
 <meta name="keywords" content="Local SEO,Local SEO">
 <meta name="author" content="Local SEO">
 <link rel="canonical" href="local-seo-2.html">
@@ -61,7 +61,7 @@ html {
 }
 
 .bg-brown {
- background: #efede9;
+ background: #fcfaf6;
 }
 
 .bg-primary-new {
@@ -150,13 +150,13 @@ a {
 }
 
 .bg-brown * {
- color: #070707;
+ color: #080808;
 
 }
 
 .bg-brown a,
 .bg-primary-new a {
- color: #070707 !important;
+ color: #080808 !important;
  text-decoration: underline !important;
 }
 
@@ -204,7 +204,7 @@ iframe {
 }
 
 footer {
- background: #0a0a0a;
+ background: #0b0b0b;
  color: #ffffff;
 }
 
@@ -499,37 +499,37 @@ footer a {
 "teaches": ["Local SEO"],
 "offers": [{
 "sku": "Local SEO",
-"availabilityStarts": "2023-06-19 10:50:36",
+"availabilityStarts": "2023-06-19 10:50:43",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:36",
+"availabilityStarts":"2023-06-19 10:50:43",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:36",
+"availabilityStarts":"2023-06-19 10:50:43",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:36",
+"availabilityStarts":"2023-06-19 10:50:43",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:36",
+"availabilityStarts":"2023-06-19 10:50:43",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts": "2023-06-19 10:50:36",
+"availabilityStarts": "2023-06-19 10:50:43",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:36",
+"availabilityStarts":"2023-06-19 10:50:43",
 "priceCurrency": "USD"
 } 
 ],
@@ -1660,8 +1660,8 @@ Q2. Why is link building important for SEO?",
 "name": "Local SEO",
 "aggregateRating": {
 "@type": "AggregateRating",
-"ratingValue": "3","ratingCount": "4",
-"reviewCount": "4"
+"ratingValue": "4","ratingCount": "5",
+"reviewCount": "3"
 }
 }
 </script>
@@ -1729,7 +1729,7 @@ Q2. Why is link building important for SEO?",
 <h1 class="mbr-section-h1 text-dark mb-0 ">Local SEO</h1>  
 <h2 class="mbr-section-subsection text-grey "><b>Local SEO</b></h2>
 </div><div class="   col-lg-12 m-auto ">
-<div class="content1  ">Local SEO is an essential part of any business' success! It is the process of optimizing a website and its content to be more visible in search engine results for local searches. This helps businesses to increase visibility, drive traffic, generate leads, and ultimately increase their revenue. One way to optimize your website for local searches is by creating content that has keywords specifically related to your location or services. Additionally, it is important to ensure that all information on your site such as address, contact number and opening hours are up-to-date (for example: make sure you don't have old holiday hours listed). <br /> <br /> Furthermore, it's crucial that you claim and optimize your Google My Business listing. By doing this you will appear when someone performs a local search relevant to your business. You should also take advantage of other online directories such as Yelp or even create one yourself on social networks like Facebook. Moreover, utilizing local citations can help boost your ranking; this involves making sure that all directory listings are consistent with each other across all platforms (including spelling variations). Lastly, building relationships with influencers who have already established authority in the area might result in increased brand awareness for your company! <br /> <br /> Overall, Local SEO is an effective tool which can help business reach their goals quickly and cost efficiently! To maximize the positive effects of this strategy it's important not forget about traditional methods like word-of-mouth marketing or hosting events like workshops or seminars which may attract potential customers from the neighbourhood. <br /> <br /> In conclusion, Local SEO has become increasingly popular over the years as it allows companies to target customers within their geographical region more precisely than ever before! So if you haven't already implemented this tactic into your marketing plan then now might be a great time to start!<p><a class="ILinks" href="technical-seo-2.html">Technical SEO</a></p></div>
+<div class="content1  ">Local SEO (Search Engine Optimization) is a powerful tool for small businesses. It can help you reach custumers in your local area who are looking for services and products which you offer. To ensure that your website shows up at the top of search engine results, it's important to get familiar with some basic local SEO techniques! <br /> <br /> Firstly, make sure you set up your business profiles on major search engines and social media platforms. This way, customers will be able to find you easily online. You should also use relevant keywords related to your business in all content on your site. Doing this allows search engines to understand what your website is about, so they better rank it locally. <br /> <br /> Furthermore, optimize images on your website by adding captions and tags with keywords. Additionally, acquire backlinks from other respected websites in order to increase trustworthiness in the eyes of search engines. And lastly, always keep track of analytics data such as page views or conversions – this will give you valuable insight into how well specific strategies are working for you! <br /> <br /> Ultimately, successful Local SEO requires regular maintenance and updating; however with consistent effort it can pay off greatly! With more customers finding their way onto your page due to higher rankings on search engine results pages, there’s no doubt that this strategy can have an impactful effect on boosting sales and increasing profits for any small business! So why not give it a try? <br /> <br /> In conclusion(!), Local SEO is an invaluable tool that can bring great rewards when used correctly. It may take some time and effort but the payoff makes it worth the while!<p><a class="ILinks" href="technical-seo-2.html">Technical SEO</a></p></div>
 </div>
 </div>
 </div>
