--- a/huzaifa/mobile-seo-2.html
+++ b/huzaifa/mobile-seo-2.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <meta name="title" content="Mobile SEO">
 <meta name="dc.title" content="Mobile SEO">
-<meta name="description" content="Mobile SEO (Search Engine Optimization) is an important aspect of any successful online business. It's a process of increasing visibility on search engine results pages by optimizing your website for mobile devices. It helps to make sure that when people are searching for products or services related to yours, they can find you easily.">
+<meta name="description" content="Mobile SEO is becoming more and an (important) factor in ranking sites. It's no lon'er (optional) for businesses to just focus on desktop optimization, but also consider mobile optimization for the best results! Mobile SEO entails optimizing a website’s content and design elements so that it can be accessed easily on all devices, especially those with smaller screens such as smartphones. This includes optimizing page speed, making sure the site is responsive, ensuring metadata is optimized and images are of appropriate sizes to load quickly etc. ">
 <meta name="keywords" content="Mobile SEO,Mobile SEO">
 <meta name="author" content="Mobile SEO">
 <link rel="canonical" href="mobile-seo-2.html">
@@ -61,7 +61,7 @@ html {
 }
 
 .bg-brown {
- background: #eae8e4;
+ background: #f4f2ee;
 }
 
 .bg-primary-new {
@@ -70,7 +70,7 @@ html {
 }
 
 .bg-primary-new * {
- color: #141414 !important;
+ color: #050505 !important;
 }
 
 .display-4 {
@@ -150,13 +150,13 @@ a {
 }
 
 .bg-brown * {
- color: #0c0c0c;
+ color: #121212;
 
 }
 
 .bg-brown a,
 .bg-primary-new a {
- color: #0c0c0c !important;
+ color: #121212 !important;
  text-decoration: underline !important;
 }
 
@@ -204,7 +204,7 @@ iframe {
 }
 
 footer {
- background: #0e0e0e;
+ background: #121212;
  color: #ffffff;
 }
 
@@ -499,37 +499,37 @@ footer a {
 "teaches": ["Mobile SEO"],
 "offers": [{
 "sku": "Mobile SEO",
-"availabilityStarts": "2023-06-19 10:50:37",
+"availabilityStarts": "2023-06-19 10:50:44",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:37",
+"availabilityStarts":"2023-06-19 10:50:44",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:37",
+"availabilityStarts":"2023-06-19 10:50:44",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:37",
+"availabilityStarts":"2023-06-19 10:50:44",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:37",
+"availabilityStarts":"2023-06-19 10:50:44",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts": "2023-06-19 10:50:37",
+"availabilityStarts": "2023-06-19 10:50:44",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:37",
+"availabilityStarts":"2023-06-19 10:50:44",
 "priceCurrency": "USD"
 } 
 ],
@@ -1660,8 +1660,8 @@ Q2. Why is link building important for SEO?",
 "name": "Mobile SEO",
 "aggregateRating": {
 "@type": "AggregateRating",
-"ratingValue": "5","ratingCount": "5",
-"reviewCount": "3"
+"ratingValue": "3","ratingCount": "4",
+"reviewCount": "5"
 }
 }
 </script>
@@ -1729,7 +1729,7 @@ Q2. Why is link building important for SEO?",
 <h1 class="mbr-section-h1 text-dark mb-0 ">Mobile SEO</h1>  
 <h2 class="mbr-section-subsection text-grey "><b>Mobile SEO</b></h2>
 </div><div class="   col-lg-12 m-auto ">
-<div class="content1  ">Mobile SEO (Search Engine Optimization) is an important aspect of any successful online business. It's a process of increasing visibility on search engine results pages by optimizing your website for mobile devices. It helps to make sure that when people are searching for products or services related to yours, they can find you easily.<br /> <br /> However, achieving good results in mobile SEO requires more than just optimizing your website for smartphones and tablets. You need to keep up with the ever-changing technology landscape and also be aware of the latest trends in user behavior. This means understanding how users engage with content on different devices and understanding their needs when using them. <br /> <br /> Moreover, it's essential to optimize your site for voice search since many people now use digital assistants such as Amazon Alexa and Google Home to search for information about products and services instead of typing into a traditional web browser. To ensure success, you must ensure that your keyword phrases match what people are actually asking so that you're providing relevant answers quickly. (Also, don't forget about local optimization!) <br /> <br /> Furthermore, it's important not to overlook speed when it comes to mobile SEO! People expect websites to load quickly on their phones and tablets; otherwise they'll likely move on before they even see what you have available. Plus, page loading speed is now a ranking factor for mobile searches; if your site takes too long to load then its rankings will suffer accordingly! <br /> <br /> Last but not least, pay attention to usability: Make sure navigation is easy, links work correctly across all devices, images render properly no matter what device they’re viewed on and forms can be filled out without difficulty. These factors may seem small but they can have a huge impact on whether someone decides to stay on your site or leave it immediately – which ultimately affects your organic rankings! <br /> <br /> In conclusion, Mobile SEO is becoming increasingly important as more people turn to their smartphones and other devices instead of desktops or laptops when searching online - making it an absolute necessity if you want your business’s online presence felt! With the proper strategies in place though, there's no reason why you won't achieve high rankings in no time at all!<p><a class="ILinks" href="local-seo-2.html">Local SEO</a></p></div>
+<div class="content1  ">Mobile SEO is becoming more and an (important) factor in ranking sites. It's no lon'er (optional) for businesses to just focus on desktop optimization, but also consider mobile optimization for the best results! Mobile SEO entails optimizing a website’s content and design elements so that it can be accessed easily on all devices, especially those with smaller screens such as smartphones. This includes optimizing page speed, making sure the site is responsive, ensuring metadata is optimized and images are of appropriate sizes to load quickly etc. <br /> <br /> Furthermore, there are several aspects of mobile search engine optimization that differ from traditional SEO. For example, voice search queries tend to be longer than text-based ones due to natural language processing technology; hence, the need for keyword research tools that help you identify relevant phrases used by users when performing searches using their voice commands. Additionally, local business listings should also be optimised with updated address information and contact details so that customers can find them easily on maps or other location-based services. <br /> <br /> Moreover, mobile-friendly web pages must make use of concise imagery and fast loading times in order to maximise UX (User Experience). Site navigation should be made easier through proper categorization of content into menus or breadcrumbs which will help users get around with ease. Furthermore, clickable buttons should allow for larger finger taps instead of hovering cursors; this ensures better usability while navigating the website on a tiny device like a smartphone. <br /> <br /> In conclusion, Mobile SEO has become increasingly crucial in gaining higher rankings for websites and thus more visibility among potential customers & clients! With all these factors taken into consideration while developing your website you’ll stand much better chances at achieving success organically through improved SERP rankings. Therefore it is important for businesses to invest time in doing proper research before embarking on their mobile SEO journey!<p><a class="ILinks" href="local-seo-2.html">Local SEO</a></p></div>
 </div>
 </div>
 </div>
